Playing with parameters

--- a/pools_specific_EDA/Open River/Open River Analysis.ipynb
+++ b/pools_specific_EDA/Open River/Open River Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "psychological-hudson",
+   "id": "first-secretary",
    "metadata": {},
    "source": [
     "### Imports and function declaration"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "boring-patent",
+   "execution_count": 2,
+   "id": "radio-timber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "professional-consciousness",
+   "id": "agricultural-guyana",
    "metadata": {},
    "source": [
     "Below cells are for debugging purposes"
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "analyzed-jacksonville",
+   "id": "wound-graph",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "infrared-words",
+   "id": "provincial-macintosh",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "confident-refrigerator",
+   "id": "precious-sterling",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "portable-pottery",
+   "id": "settled-calcium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "silver-biodiversity",
+   "id": "rocky-foundation",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-credit",
+   "id": "narrow-shape",
    "metadata": {},
    "source": [
     "Now change the variable"
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "conscious-trailer",
+   "id": "difficult-exception",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "organizational-advertiser",
+   "id": "arranged-crime",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "appropriate-graph",
+   "id": "plain-surface",
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "asian-coverage",
+   "id": "discrete-massachusetts",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "brazilian-operator",
+   "id": "conceptual-humanity",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "humanitarian-rolling",
+   "id": "specialized-tonight",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boring-volume",
+   "id": "relative-boston",
    "metadata": {},
    "source": [
     "### Loading and Filtering data"
@@ -1221,7 +1221,57 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "regulated-principle",
+   "id": "baking-toner",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_path = r\"..\\..\\LTRM data\\ltrm_water_data_lat_long.csv\"\n",
+    "water_data = pd.read_csv(water_path, low_memory = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dynamic-peninsula",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_data[\"YEAR\"] = pd.DatetimeIndex(water_data[\"DATE\"]).year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "difficult-bleeding",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    157173.000000\n",
+       "mean         43.161993\n",
+       "std          80.928515\n",
+       "min          -9.000000\n",
+       "25%          10.000000\n",
+       "50%          22.000000\n",
+       "75%          47.000000\n",
+       "max        5580.000000\n",
+       "Name: TURB, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"TURB\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "pharmaceutical-tribe",
    "metadata": {
     "scrolled": true
    },
@@ -1298,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "terminal-corps",
+   "id": "plastic-popularity",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indirect-diagram",
+   "id": "efficient-banks",
    "metadata": {},
    "source": [
     "Checking negative values"
@@ -1513,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "extreme-amsterdam",
+   "id": "explicit-bunch",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finite-crack",
+   "id": "independent-decline",
    "metadata": {},
    "source": [
     "Checking for weird location codes"
@@ -1553,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "buried-criminal",
+   "id": "continued-chemistry",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developmental-night",
+   "id": "baking-spain",
    "metadata": {},
    "source": [
     "Insanity check for time seasons"
@@ -1584,7 +1634,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "thick-newfoundland",
+   "id": "irish-receipt",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinguished-peeing",
+   "id": "athletic-radius",
    "metadata": {},
    "source": [
     "#### Checking stratum data size"
@@ -1613,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "frozen-bacteria",
+   "id": "fleet-client",
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "protecting-administration",
+   "id": "forty-surge",
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "limited-personality",
+   "id": "sacred-africa",
    "metadata": {
     "scrolled": true
    },
@@ -1727,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "duplicate-stream",
+   "id": "hispanic-merit",
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "close-lending",
+   "id": "affiliated-warning",
    "metadata": {},
    "source": [
     "#### Taking a look at our variables"
@@ -1756,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sustainable-tracy",
+   "id": "referenced-montgomery",
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +2003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apparent-landscape",
+   "id": "hawaiian-injection",
    "metadata": {},
    "source": [
     "#### Boxplots and histograms"
@@ -1962,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "respective-agreement",
+   "id": "administrative-loading",
    "metadata": {
     "scrolled": true
    },
@@ -1991,7 +2041,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "identified-lotus",
+   "id": "union-poetry",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "increasing-costume",
+   "id": "surgical-knight",
    "metadata": {},
    "source": [
     "#### Missing data"
@@ -2033,7 +2083,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "productive-feeling",
+   "id": "polished-hierarchy",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ambient-dylan",
+   "id": "executive-reducing",
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "accepted-apparatus",
+   "id": "union-cinema",
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "loaded-champagne",
+   "id": "dense-discrimination",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "private-apartment",
+   "id": "arbitrary-leather",
    "metadata": {},
    "outputs": [
     {
@@ -2148,7 +2198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-adaptation",
+   "id": "intimate-cathedral",
    "metadata": {},
    "source": [
     "How much data is TDA ready?"
@@ -2157,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "seasonal-nerve",
+   "id": "least-organ",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2217,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "enhanced-trick",
+   "id": "dress-schedule",
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "editorial-thanksgiving",
+   "id": "secondary-debut",
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-miniature",
+   "id": "standard-generation",
    "metadata": {},
    "source": [
     "#### Interpolating missing data (by year, by timecode)"
@@ -2230,7 +2280,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "human-samba",
+   "id": "welsh-sherman",
    "metadata": {
     "scrolled": true
    },
@@ -2255,7 +2305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-intellectual",
+   "id": "median-position",
    "metadata": {},
    "source": [
     "Look at the interpolated dataset"
@@ -2264,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "legal-peripheral",
+   "id": "typical-lease",
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "asian-slope",
+   "id": "developing-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "running-strain",
+   "id": "external-europe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2536,7 +2586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-devon",
+   "id": "quality-fifteen",
    "metadata": {},
    "source": [
     "Now see how many rows we gained after interpolation"
@@ -2545,7 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "pending-brunswick",
+   "id": "military-adapter",
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-humidity",
+   "id": "peaceful-invention",
    "metadata": {},
    "source": [
     "#### Checking how good we did with prediction on each variable, first we need to filter the data based off values we already have"
@@ -2577,7 +2627,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "objective-enterprise",
+   "id": "streaming-jurisdiction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2589,7 +2639,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "threatened-frederick",
+   "id": "fuzzy-miracle",
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2927,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "fallen-industry",
+   "id": "sound-rates",
    "metadata": {},
    "outputs": [
     {
@@ -3165,7 +3215,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "annual-centre",
+   "id": "national-ivory",
    "metadata": {},
    "outputs": [
     {
@@ -3234,7 +3284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seasonal-organizer",
+   "id": "sealed-opportunity",
    "metadata": {},
    "source": [
     "Looking at accuracy of TN"
@@ -3243,7 +3293,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "other-paintball",
+   "id": "checked-night",
    "metadata": {
     "scrolled": true
    },
@@ -3966,7 +4016,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "sought-pension",
+   "id": "qualified-oliver",
    "metadata": {},
    "outputs": [
     {
@@ -4009,7 +4059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grand-sense",
+   "id": "curious-learning",
    "metadata": {},
    "source": [
     "Looking at accuracy of TP"
@@ -4018,7 +4068,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "sharing-porter",
+   "id": "bulgarian-calibration",
    "metadata": {
     "scrolled": true
    },
@@ -4743,7 +4793,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "superior-conservative",
+   "id": "compressed-cologne",
    "metadata": {},
    "outputs": [
     {
@@ -4786,7 +4836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manufactured-kingdom",
+   "id": "municipal-twenty",
    "metadata": {},
    "source": [
     "Looking at accuracy of VEL"
@@ -4795,7 +4845,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "reflected-latvia",
+   "id": "entertaining-hurricane",
    "metadata": {
     "scrolled": true
    },
@@ -5130,7 +5180,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "organized-negotiation",
+   "id": "afraid-diameter",
    "metadata": {},
    "outputs": [
     {
@@ -5173,7 +5223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "significant-shaft",
+   "id": "urban-mechanism",
    "metadata": {},
    "source": [
     "### Multivariate Regression Attempt on Open River"
@@ -5181,7 +5231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invalid-rebate",
+   "id": "dried-sphere",
    "metadata": {},
    "source": [
     "Filter for non missing data"
@@ -5190,7 +5240,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "experimental-format",
+   "id": "caroline-alexandria",
    "metadata": {},
    "outputs": [
     {
@@ -5217,7 +5267,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "comic-dollar",
+   "id": "magnetic-worse",
    "metadata": {},
    "outputs": [
     {
@@ -5299,7 +5349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interim-thesaurus",
+   "id": "suburban-chamber",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5307,7 +5357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "essential-chain",
+   "id": "mineral-collect",
    "metadata": {},
    "outputs": [],
    "source": []
