--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "advised-collins",
+   "id": "mental-charm",
    "metadata": {},
    "source": [
     "### Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "exciting-stake",
+   "execution_count": 2,
+   "id": "august-martin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-integrity",
+   "id": "double-connectivity",
    "metadata": {},
    "source": [
     "### Functions"
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "polish-circulation",
+   "execution_count": 7,
+   "id": "pretty-butterfly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     "\n",
     "    \n",
     "    \n",
-    "def mapper_pca_func(X,title, DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = 7, PERC_OVERLAP = .5):\n",
+    "def mapper_pca_func(X,title,variables, DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = 7, PERC_OVERLAP = .5):\n",
     "    \"\"\"\n",
     "    str(df_stratum_season_time_dict_list[1].keys())\n",
     "    \"\"\"\n",
@@ -108,7 +108,7 @@
     "    my = ['PredictedTN','PredictedTP','TEMP','DO','TURB','COND','PredictedVEL','SS','WDP','CHLcal','SECCHI']\n",
     "    nocond = ['PredictedTN','PredictedTP','TEMP','DO','TURB','PredictedVEL','SS','WDP','CHLcal','SECCHI']\n",
     "\n",
-    "    X = X[nocond]\n",
+    "    X = X[variables]\n",
     "    \n",
     "    X.reset_index(drop=True,inplace = True)\n",
     "    \n",
@@ -187,7 +187,7 @@
     "                                 member_textbox_width=600)\n",
     "\n",
     "    # DESIRED FILE PATH, CHANGE TO FIT YOUR LOCAL MACHINE\n",
-    "    directory_path = r\"Mapper outputs\\Conductivity Removed PCA 1\"\n",
+    "    directory_path = r\"Mapper outputs\"\n",
     "    \n",
     "    #Update the fw_graph colorbar, setting its title:\n",
     "    fw_graph.data[1].marker.colorbar.title = 'dist to<br>x-min'\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imposed-nevada",
+   "id": "african-poison",
    "metadata": {},
    "source": [
     "### Load data"
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjustable-huntington",
+   "id": "spanish-cylinder",
    "metadata": {},
    "source": [
     "Run this cell to use Ambers Random Forrest interpolated dataset"
@@ -215,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "significant-irish",
+   "execution_count": 4,
+   "id": "collaborative-decision",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(14200, 20)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "stretch-conspiracy",
+   "execution_count": 5,
+   "id": "contrary-particular",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "(12446, 20)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annual-taylor",
+   "id": "legal-indonesian",
+   "metadata": {},
+   "source": [
+    "Mapper output of all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "administrative-personal",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X.shape:  12446\n",
+      "Variance explained:  [0.96908012]\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = \"Open_river_all_ncubes20,perc60,min30,eps5\"\n",
+    "scomplex, X = mapper_pca_func(predicted_df,title,nocond,N_CUBES=20,PERC_OVERLAP=0.6,DBSCAN_MIN_SAMPLES = 30,DBSCAN_EPSILON=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "extensive-attachment",
    "metadata": {},
    "source": [
     "Run this cell to use the IDW by year by season interpolated dataset"
@@ -283,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "affecting-intensity",
+   "id": "inappropriate-monthly",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "critical-racing",
+   "id": "cultural-photograph",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "induced-colleague",
+   "id": "separated-armstrong",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "complex-permit",
+   "id": "demonstrated-norway",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dirty-scotland",
+   "id": "narrow-vegetarian",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "improved-strength",
+   "id": "annual-defensive",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imperial-stand",
+   "id": "dedicated-mercury",
    "metadata": {},
    "source": [
     "Saving all outputs to json save scomplices and data"
@@ -865,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "completed-damage",
+   "id": "mysterious-maldives",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complete-powell",
+   "id": "arbitrary-triple",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -888,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "modular-pointer",
+   "id": "revolutionary-apartment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "digital-foundation",
+   "id": "lovely-challenge",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-particular",
+   "id": "maritime-inside",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -930,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "white-kernel",
+   "id": "hispanic-adapter",
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-necessity",
+   "id": "convinced-temple",
    "metadata": {},
    "source": [
     "Function to return a nested list of connected components"
@@ -970,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "developmental-montana",
+   "id": "adult-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "packed-smell",
+   "id": "practical-mileage",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "outdoor-terrorist",
+   "id": "isolated-combat",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cognitive-colleague",
+   "id": "descending-conviction",
    "metadata": {},
    "outputs": [],
    "source": []
