--- a/TDA_Analysis_Scripts/scomplexAnalysis_Coloring.ipynb
+++ b/TDA_Analysis_Scripts/scomplexAnalysis_Coloring.ipynb
@@ -774,7 +774,8 @@
     "def draw_graph(scomplex, filepath, with_labels=False):\n",
     "    colors = ['#ff0000', '#3366ff', '#00ff00', '#ff00ff', '#669999']\n",
     "    colors_dict = {scomplex['maxima'][i] : colors[i] for i in range(len(scomplex['maxima']))}\n",
-    "    transition_color = '#ffff00'\n",
+    "    transition_color = '#db_eps10_minsamp10_ncube100_perc30\n",
+    "hdb_minclust10_minsamp5_ncube75_perc30'\n",
     "    color_map = []\n",
     "    scomplex['states'] = {scomplex['maxima'][i] : [] for i in range(len(scomplex['maxima']))}\n",
     "    \n",
@@ -894,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
